@@ -928,15 +928,17 @@ VARIABLES
 	      Machine, i686 for example
 
 
-       mails  Mail  count in mail spool. You can use program like fetchmail to
-	      get mails from some server using your  favourite	protocol.  See
-	      also new_mails.
+       mails (mailbox) (interval)
+	      Mail  count  in the specified mailbox or your mail spool if not.
+	      Both mbox and maildir type mailboxes are supported. You can  use
+	      a	 program  like	fetchmail  to get mails from some server using
+	      your favourite protocol. See also new_mails.
 
 
        mboxscan (-n number of messages to print) (-fw from width) (-sw subject
        width) mbox
-	      Print  a	summary	 of recent messages in an mbox format mailbox.
-	      mbox parameter is the filename of the mailbox (can  be  encapsu-
+	      Print a summary of recent messages in an	mbox  format  mailbox.
+	      mbox  parameter  is the filename of the mailbox (can be encapsu-
 	      lated using '"', ie. ${mboxscan -n 10 "/home/brenden/some box"}
 
 
@@ -1019,8 +1021,9 @@ VARIABLES
 	      name, depending on whats available
 
 
-       new_mails
-	      Unread mail count in mail spool.
+       new_mails (mailbox) (interval)
+	      Unread mail count in the specified mailbox or mail spool if not.
+	      Both mbox and maildir type mailboxes are supported.
 
 
        nodename
